src/objects/TR1__Interaction__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__SOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Out Schedule</label>
        <referenceTo>TR1__Send_Out_Schedule__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interaction</label>
    <nameField>
        <displayFormat>INR-{0000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>